# DetectTamper

./: README.md  TamperDetector.apk
app/: build.gradle
app/src/main/c/: CMakeLists.txt
app/src/main/c/core/: mylibc.h  native-lib.c
app/src/main/c/marker/: text_end.c  text_start.c
app/src/main/java/com/darvin/security/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
injecthash/: injecthash.go
libzip/arm64-v8a/lib/pkgconfig/: libzip.pc
libzip/armeabi-v7a/lib/pkgconfig/: libzip.pc
libzip/x86/lib/pkgconfig/: libzip.pc
libzip/x86_64/include/: zipconf.h
libzip/x86_64/lib/pkgconfig/: libzip.pc
mbedtls/include/mbedtls/: config.h
